# english-practice

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
dictation/: __init__.py  analysis.py  analytics.py  app.py  app_core.py  diff.py  recent_practices.py  segmentation.py  ui_templates.py
dictation/asr/: __init__.py  base.py  qwen.py
dictation/utils/: __init__.py  io.py  scan.py
english_learning/: __init__.py  app.py  diff.py  models.py  segmentation.py  subtitle.py
english_learning/asr/: __init__.py  _text_split.py  qwen.py  whisper.py
tests/: test_segmentation.py
